feat: add MenuPrice, MenuName, MenuProducts value objects